--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --color-text-features-p: #434455;
   --background-color-primary: #ffffff;
   --background-color-our-team: #f4f4fd;
+  --accent-active-color: #404bbf;
 }
 
 body {
@@ -106,6 +107,14 @@ img {
 .header-link:focus {
   color: var(--link-hover);
 }
+/* .link-studio::before {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 4;
+  border-radius: 50%;
+  background-color: #404bbf;
+} */
 .address {
   font-style: normal;
   margin-left: auto;
@@ -344,10 +353,7 @@ img {
   justify-content: center;
   align-items: center;
 }
-.coustomers-items:hover,
-.coustomers-items:focus {
-  border-color: #404bbf;
-}
+
 .coustomers-items-link {
   width: 100%;
   height: 100%;
@@ -360,10 +366,20 @@ img {
   height: 56px;
   fill: #8e8f99;
 }
-.coustomers-items-icon:hover,
-.coustomers-items-icon:focus {
-  fill: #404bbf;
+
+.coustomers-items:is(:hover, :focus) .coustomers-items-icon {
+  fill: var(--accent-active-color);
 }
+.coustomers-items:is(:hover, :focus) {
+  border-color: var(--accent-active-color);
+}
+
+/* .coustomers-items-icon:is(:hover, :focus) {
+  fill: #404bbf;
+} */
+/* .coustomers-items:is(:hover, :focus) .coustomers-items-icon {
+  fill: #404bbf;
+ } */
 
 /* ====================footer========================= */
 .footer {
@@ -372,7 +388,6 @@ img {
   padding-bottom: 100px;
 }
 .logo-web-footer {
-  margin-left: 156px;
   display: flex;
 }
 .text-social {
@@ -384,7 +399,7 @@ img {
 .footer-text {
   color: var(--color-text-footer);
   margin-top: 16px;
-  margin-left: 156px;
+
   width: 264px;
 }
 .footer-div {
